GCP/auth-service-yml/auth-deplyment.yml
apiVersion: v1
kind: Service
metadata:
  name: nvne-auth
  namespace: nvne
  labels:
    app: nvne-auth
spec:
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: nvne-auth
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nvne-auth
  namespace: nvne
  labels:
    app: nvne-auth
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nvne-auth
  template:
    metadata:
      labels:
        app: nvne-auth
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:11.0.1
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        readinessProbe:
          httpGet:
            path: /auth/realms/master
            port: 8080
