GCP/auth-service-yml/auth-service-lb.yml
apiVersion: v1
kind: Service
metadata:
  name: nvne-kc
  namespace: nvne
  labels:
    app: keycloak
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: keycloak
  type: LoadBalancer
